--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "husky install .husky",
     "check-types": "tsc --pretty --noEmit",
-    "check-format": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
+    "check-format": "prettier --check \"src/**/*.ts\"",
     "check-lint": "eslint \"{src,apps,libs,test}/**/*.ts\""
   },
   "dependencies": {
