--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.2",
@@ -36,6 +37,7 @@
     "class-validator": "^0.14.0",
     "nest-winston": "^1.9.3",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
     "prisma": "^5.0.0",
     "reflect-metadata": "^0.1.13",
